tooling/nargo_cli/tests/snapshots/execution_success/lambda_from_global_tuple/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
global FN_TUPLE: (fn() -> Field, fn() -> Field) = (f1, f2);

fn main(y: Field) {
    assert((FN_TUPLE.0)() != y);
    assert((FN_TUPLE.1)() == y);
}

fn f1() -> Field {
    1
}

fn f2() -> Field {
    2
}
