tooling/nargo_cli/tests/snapshots/execution_success/lambda_from_global_tuple/execute__tests__force_brillig_false_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "y",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {}
  },
  "bytecode": [
    "func 0",
    "current witness index : _1",
    "private parameters indices : [_0]",
    "public parameters indices : []",
    "return value indices : []",
    "BRILLIG CALL func 0: inputs: [EXPR [ (-1, _0) 1 ]], outputs: [_1]",
    "EXPR [ (-1, _0, _1) (1, _1) -1 ]",
    "EXPR [ (-1, _0) 2 ]",
    "unconstrained func 0",
    "[Const { destination: Direct(21), bit_size: Integer(U32), value: 1 }, Const { destination: Direct(20), bit_size: Integer(U32), value: 0 }, CalldataCopy { destination_address: Direct(0), size_address: Direct(21), offset_address: Direct(20) }, Const { destination: Direct(2), bit_size: Field, value: 0 }, BinaryFieldOp { destination: Direct(3), op: Equals, lhs: Direct(0), rhs: Direct(2) }, JumpIf { condition: Direct(3), location: 8 }, Const { destination: Direct(1), bit_size: Field, value: 1 }, BinaryFieldOp { destination: Direct(0), op: Div, lhs: Direct(1), rhs: Direct(0) }, Stop { return_data: HeapVector { pointer: Direct(20), size: Direct(21) } }]"
  ],
  "debug_symbols": "jZDBDoMgDIbfpWcOYvQwX2VZDGI1JARIhSWL8d1XiWx6WLILpf37/YR/hRGHNPfGTX6B7r7CQMZaM/fWaxWNdzxdNwGl7SMh8ghOOlNBEboInUvWCngqm/LSEpTLNSpitRKAbuTKhpOxuN828aWr3+itPlgp5Ydu/8Zl3Ra+aS78gzulDV0+DBUvCpD5rKGrt92ajBosHoFMyelTPvEVilISDOQ1jolwt84aP/YG",
  "file_map": {
    "50": {
      "source": "global FN_TUPLE: (fn() -> Field, fn() -> Field) = (f1, f2);\n\nfn main(y: Field) {\n    assert((FN_TUPLE.0)() != y);\n    assert((FN_TUPLE.1)() == y);\n}\n\nfn f1() -> Field {\n    1\n}\n\nfn f2() -> Field {\n    2\n}\n",
      "path": ""
    }
  },
  "expression_width": {
    "Bounded": {
      "width": 4
    }
  }
}
